tests/integration/errors/break_outside_loop.rsg
// TEST: compile_error
// EXPECT-ERROR: 'break' outside of loop

fn main() {
    break
}
